# Real-Time-Industry-Insight-and-Strategic-Intelligence-System

./: .env  Group1Agile_filled.xlsx  README.md  req.txt  requirements.txt
industry/: .env  README.md  app.py  compareclient.py  compareserver.py  main.py  mcp_server.py  pyproject.toml  require.txt
industry/.devcontainer /: devcontainer.json
