[project]
name = "serpmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=3.1.1",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.1.3",
    "mcp>=1.26.0",
    "pandas>=2.3.3",
    "requests>=2.33.0",
    "serpapi>=1.0.2",
    "streamlit>=1.55.0",
    "wikipedia>=1.4.0",
]
